feat(item-type): unlink picture
